--- a/_sass/_typography.sass
+++ b/_sass/_typography.sass
@@ -95,9 +95,9 @@ h4
     font-size: .9em
 
 p
-  font-size: .95em
+  font-size: 1em
   // font-family: "garamond-premier-pro-display", $main-font, helvetica
-  line-height: 1.5em
+  line-height: 1.7em
   font-style: normal
   font-weight: 300
   // font-weight: 400
@@ -108,10 +108,10 @@ p
   text-align: left
   color: $gray
 .image-bullet
-  max-width: 16px
+  max-width: 10px
   float: left
-  margin-right: 7px
+  margin-right: 9px
   position: relative
-  margin-top: 5px
+  margin-top: 7px
 .blue
   color: $blue
